Changes from jTDS 0.8
=========================

07/07/2004 - Brian Heineman
 o Added test for bug [974036] Bug in 0.8rc1 DatabaseMetaData method
   getTableTypes()

07/01/2004 - Brian Heineman
 o Improved Blob and Clob support.  Writes done through a Blob or Clob are now
   buffered in memory if the data size is less than 32KB.  If the data size is
   greater than 32KB, the Blob/Clob will attempt to cache the data to disk.
   A failed attempt at disk caching due to a SecurityException will be logged
   and the Blob/Clob data will remain in memory.  Also, the READTEXT mechanism
   will only convert to an in-memory or disk based Blob/Clob if a write attempt
   is made.
 o Improved Blob and Clob conversions to/from other data types.

06/29/2004 - Brian Heineman
 o Corrected bug with cached statements and savepoints.  If a statement was
   cached after a savepoint was set, that statement would not be removed
   from the cache if the savepoint was rolledback.  Added test to ensure
   this functionality continues to work in the future.

06/23/2004 - Brian Heineman
 o Applied patch [950028] Jtds enhancement - TDS 5.0 (thanks to code provided
   by Mike Hutchinson this patch corrects a number of bugs and adds initial
   support for TDS 8.0 as well)
 o Corrected bug with Savepoint id assignment.
 o Improved performance of data conversions by reducing memory allocations.
 o Corrected bug [974036] Bug in 0.8rc1 DatabaseMetaData method getTableTypes()

===============================================================================
06/22/2004 - jTDS 0.8 released
===============================================================================

Changes from jTDS 0.8-rc1
=========================

06/08/2004 - Brian Heineman
 o Corrected bug [965018] translateDate is not recognized function name.

05/30/2004 - Brian Heineman
 o Corrected bug where "Cp" or "MS" was being appended to strings that already
   started with a different case of the same sequence of characters.