@@ -4,6 +4,8 @@ Changes from jTDS 0.8
 07/07/2004 - Brian Heineman
  o Added test for bug [974036] Bug in 0.8rc1 DatabaseMetaData method
    getTableTypes()
+ o Corrected bug [985956] Cannot setObject(null) on image; Added test to ensure
+   this functionality continues to work in the future.
 
 07/01/2004 - Brian Heineman
  o Improved Blob and Clob support.  Writes done through a Blob or Clob are now
